[gd_scene load_steps=44 format=3 uid="uid://cqke1inx24x7"]

[ext_resource type="Script" path="res://meta.gd" id="1_0agni"]
[ext_resource type="Theme" uid="uid://rkuq07yx7uwt" path="res://ui/ui.tres" id="4_5a274"]
[ext_resource type="Script" path="res://ui/scripts/ui.gd" id="6_f0bum"]
[ext_resource type="Script" path="res://director/loader.gd" id="6_inifb"]
[ext_resource type="Texture2D" uid="uid://bki3g7giotk5d" path="res://ui/textures/highstepper.png" id="7_84ki6"]
[ext_resource type="Script" path="res://ui/scripts/view_options.gd" id="8_rvqg6"]
[ext_resource type="Script" path="res://ui/scripts/camera_button.gd" id="9_87rpc"]
[ext_resource type="Texture2D" uid="uid://ct6gxwc6yfis8" path="res://ui/textures/wing.png" id="10_sfkij"]
[ext_resource type="Texture2D" uid="uid://v1lh8yvq05hq" path="res://ui/textures/spectator.png" id="11_e44ms"]
[ext_resource type="Texture2D" uid="uid://0dk8hoanbpr3" path="res://ui/textures/eye.png" id="12_0lt53"]
[ext_resource type="Script" path="res://director/network.gd" id="12_1ifd6"]
[ext_resource type="Texture2D" uid="uid://dyavtdo23l53x" path="res://ui/textures/bone.png" id="13_22mpu"]
[ext_resource type="Texture2D" uid="uid://sbcbchcxc27" path="res://ui/textures/head.png" id="14_wqk1x"]
[ext_resource type="Texture2D" uid="uid://bal26t6lpaaeh" path="res://ui/textures/simulator.png" id="15_ipkdy"]
[ext_resource type="Shader" path="res://ui/shaders/circle.gdshader" id="17_gu7m6"]
[ext_resource type="Texture2D" uid="uid://boxhrwr2cegun" path="res://ui/textures/play.png" id="18_53c3i"]
[ext_resource type="Texture2D" uid="uid://kmgyrtcfx16h" path="res://ui/textures/skip_forward.png" id="19_6a6cn"]
[ext_resource type="Script" path="res://ui/scripts/tab_menu.gd" id="20_ork4b"]
[ext_resource type="Texture2D" uid="uid://cld2872o0eij" path="res://ui/textures/menu.png" id="21_dywut"]
[ext_resource type="Script" path="res://director/agentdirector.gd" id="21_h38bp"]
[ext_resource type="Script" path="res://director/movementcontroller.gd" id="22_1bkpa"]
[ext_resource type="Texture2D" uid="uid://c5j3tpeipvw8r" path="res://world/textures/field.png" id="22_t7cpp"]

[sub_resource type="FontVariation" id="FontVariation_wostj"]

[sub_resource type="LabelSettings" id="LabelSettings_f23hy"]
font = SubResource("FontVariation_wostj")
font_size = 43
outline_size = 2

[sub_resource type="FontVariation" id="FontVariation_hwhbm"]

[sub_resource type="LabelSettings" id="LabelSettings_8j0sq"]
font = SubResource("FontVariation_hwhbm")
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_1mtp0"]
line_spacing = -7.0

[sub_resource type="LabelSettings" id="LabelSettings_expfl"]
font = SubResource("FontVariation_hwhbm")
font_size = 30

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lxmka"]
shader = ExtResource("17_gu7m6")

[sub_resource type="Animation" id="Animation_2dfly"]
resource_name = "slide_out"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 120), Vector2(-480, 120)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xsdqm"]
_data = {
"slide_out": SubResource("Animation_2dfly")
}

[sub_resource type="LabelSettings" id="LabelSettings_xwrag"]
font_size = 24

[sub_resource type="FontVariation" id="FontVariation_oe8b1"]
variation_embolden = 0.45

[sub_resource type="LabelSettings" id="LabelSettings_4ofsf"]
font = SubResource("FontVariation_oe8b1")
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_4mjcl"]
font_size = 24

[sub_resource type="Animation" id="Animation_32g33"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Content:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Content/Show List:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-240, 45)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../Viewer Controls/Toolbar/Title Bar:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:anchors_preset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [15]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:anchor_bottom")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_orhoi"]
resource_name = "transition"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Content:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Content/Show List:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.25, 0.35),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-240, 45), Vector2(-240, -1000)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Toolbar/Title Bar:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 0.420448, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:anchors_preset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2, 0.5, 1.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [-1, -1, 15]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:anchor_bottom")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.2, 0.5),
"transitions": PackedFloat32Array(0.517632, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eo7hj"]
_data = {
"RESET": SubResource("Animation_32g33"),
"transition": SubResource("Animation_orhoi")
}

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_lv2sy"]

[sub_resource type="Sky" id="Sky_taq2v"]
sky_material = SubResource("ProceduralSkyMaterial_lv2sy")

[sub_resource type="Environment" id="Environment_8aip2"]
background_mode = 2
sky = SubResource("Sky_taq2v")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ed38i"]
albedo_texture = ExtResource("22_t7cpp")

[sub_resource type="PlaneMesh" id="PlaneMesh_1h4js"]
size = Vector2(160, 84)

[node name="CalChartViewer3D" type="Node"]
script = ExtResource("1_0agni")
credits = PackedStringArray("")
metadata/_edit_horizontal_guides_ = [120.0]

[node name="Director" type="Node" parent="."]

[node name="Loader" type="Node" parent="Director"]
script = ExtResource("6_inifb")

[node name="Network" type="HTTPRequest" parent="Director"]
script = ExtResource("12_1ifd6")

[node name="Agent Director" type="Node" parent="Director"]
script = ExtResource("21_h38bp")

[node name="Movement Controller" type="Node" parent="Director"]
script = ExtResource("22_1bkpa")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_f0bum")

[node name="Focus Detector" type="TextureButton" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.999
anchor_bottom = 0.994
offset_right = 1.91992
offset_bottom = 6.47998
action_mode = 0

[node name="Viewer Controls" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Toolbar" type="ColorRect" parent="UI/Viewer Controls"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_bottom = 120.0
color = Color(0.160784, 0.168627, 0.192157, 1)

[node name="Title Bar" type="Control" parent="UI/Viewer Controls/Toolbar"]
anchors_preset = 0

[node name="Show Name" type="Label" parent="UI/Viewer Controls/Toolbar/Title Bar"]
layout_mode = 0
offset_left = 95.0
offset_top = 20.0
offset_right = 343.0
offset_bottom = 82.0
text = "Show Name"
label_settings = SubResource("LabelSettings_f23hy")

[node name="Year" type="Label" parent="UI/Viewer Controls/Toolbar/Title Bar"]
modulate = Color(1, 1, 1, 0.623529)
layout_mode = 0
offset_left = 93.0
offset_top = 73.0
offset_right = 296.0
offset_bottom = 115.0
text = "2023"
label_settings = SubResource("LabelSettings_8j0sq")

[node name="Highstepper" type="TextureRect" parent="UI/Viewer Controls/Toolbar/Title Bar"]
layout_mode = 0
offset_left = 9.0
offset_top = 21.0
offset_right = 85.0
offset_bottom = 97.0
texture = ExtResource("7_84ki6")
expand_mode = 1

[node name="View Options" type="HBoxContainer" parent="UI/Viewer Controls/Toolbar"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -602.0
offset_right = -1.0
offset_bottom = 120.0
grow_horizontal = 0
script = ExtResource("8_rvqg6")

[node name="Free View" type="Control" parent="UI/Viewer Controls/Toolbar/View Options"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
script = ExtResource("9_87rpc")
state = 0

[node name="Icon" type="TextureRect" parent="UI/Viewer Controls/Toolbar/View Options/Free View"]
layout_mode = 0
offset_left = 30.0
offset_top = 15.0
offset_right = 90.0
offset_bottom = 75.0
texture = ExtResource("10_sfkij")
expand_mode = 1

[node name="Label" type="Label" parent="UI/Viewer Controls/Toolbar/View Options/Free View"]
layout_mode = 0
offset_top = 75.0
offset_right = 120.0
offset_bottom = 101.0
text = "Free View"
horizontal_alignment = 1

[node name="Button" type="TextureButton" parent="UI/Viewer Controls/Toolbar/View Options/Free View"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 100.0
mouse_default_cursor_shape = 2

[node name="Spectator View" type="Control" parent="UI/Viewer Controls/Toolbar/View Options"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
script = ExtResource("9_87rpc")
camera_mode = 1

[node name="Icon" type="TextureRect" parent="UI/Viewer Controls/Toolbar/View Options/Spectator View"]
layout_mode = 0
offset_left = 30.0
offset_top = 15.0
offset_right = 90.0
offset_bottom = 75.0
texture = ExtResource("11_e44ms")
expand_mode = 1

[node name="Label" type="Label" parent="UI/Viewer Controls/Toolbar/View Options/Spectator View"]
layout_mode = 0
offset_top = 69.0
offset_right = 120.0
offset_bottom = 108.0
text = "Spectator
View"
label_settings = SubResource("LabelSettings_1mtp0")
horizontal_alignment = 1

[node name="Button" type="TextureButton" parent="UI/Viewer Controls/Toolbar/View Options/Spectator View"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 100.0
mouse_default_cursor_shape = 2

[node name="Topdown View" type="Control" parent="UI/Viewer Controls/Toolbar/View Options"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
script = ExtResource("9_87rpc")
camera_mode = 2

[node name="Icon" type="TextureRect" parent="UI/Viewer Controls/Toolbar/View Options/Topdown View"]
layout_mode = 0
offset_left = 30.0
offset_top = 15.0
offset_right = 90.0
offset_bottom = 75.0
texture = ExtResource("12_0lt53")
expand_mode = 1

[node name="Label" type="Label" parent="UI/Viewer Controls/Toolbar/View Options/Topdown View"]
layout_mode = 0
offset_top = 69.0
offset_right = 120.0
offset_bottom = 108.0
text = "Top-Down
View"
label_settings = SubResource("LabelSettings_1mtp0")
horizontal_alignment = 1

[node name="Button" type="TextureButton" parent="UI/Viewer Controls/Toolbar/View Options/Topdown View"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 100.0
mouse_default_cursor_shape = 2

[node name="Divider" type="ColorRect" parent="UI/Viewer Controls/Toolbar/View Options"]
custom_minimum_size = Vector2(2, 80)
layout_mode = 2
size_flags_vertical = 4
color = Color(0.09375, 0.0976563, 0.113281, 1)

[node name="First-Person View" type="Control" parent="UI/Viewer Controls/Toolbar/View Options"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
script = ExtResource("9_87rpc")
camera_mode = 3
state = 2

[node name="Icon" type="TextureRect" parent="UI/Viewer Controls/Toolbar/View Options/First-Person View"]
layout_mode = 0
offset_left = 30.0
offset_top = 15.0
offset_right = 90.0
offset_bottom = 75.0
texture = ExtResource("13_22mpu")
expand_mode = 1

[node name="Label" type="Label" parent="UI/Viewer Controls/Toolbar/View Options/First-Person View"]
layout_mode = 0
offset_top = 69.0
offset_right = 120.0
offset_bottom = 108.0
text = "First-Person
View"
label_settings = SubResource("LabelSettings_1mtp0")
horizontal_alignment = 1

[node name="Button" type="TextureButton" parent="UI/Viewer Controls/Toolbar/View Options/First-Person View"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 100.0
mouse_default_cursor_shape = 2

[node name="Third-Person View" type="Control" parent="UI/Viewer Controls/Toolbar/View Options"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
script = ExtResource("9_87rpc")
camera_mode = 4
state = 2

[node name="Icon" type="TextureRect" parent="UI/Viewer Controls/Toolbar/View Options/Third-Person View"]
layout_mode = 0
offset_left = 30.0
offset_top = 15.0
offset_right = 90.0
offset_bottom = 75.0
texture = ExtResource("14_wqk1x")
expand_mode = 1

[node name="Label" type="Label" parent="UI/Viewer Controls/Toolbar/View Options/Third-Person View"]
layout_mode = 0
offset_top = 69.0
offset_right = 120.0
offset_bottom = 108.0
text = "Third-Person
View"
label_settings = SubResource("LabelSettings_1mtp0")
horizontal_alignment = 1

[node name="Button" type="TextureButton" parent="UI/Viewer Controls/Toolbar/View Options/Third-Person View"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 100.0
mouse_default_cursor_shape = 2

[node name="Divider2" type="ColorRect" parent="UI/Viewer Controls/Toolbar/View Options"]
custom_minimum_size = Vector2(2, 80)
layout_mode = 2
size_flags_vertical = 4
color = Color(0.09375, 0.0976563, 0.113281, 1)

[node name="Cal Band Simulator" type="Control" parent="UI/Viewer Controls/Toolbar/View Options"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
script = ExtResource("9_87rpc")
camera_mode = 2
state = 2

[node name="Icon" type="TextureRect" parent="UI/Viewer Controls/Toolbar/View Options/Cal Band Simulator"]
layout_mode = 0
offset_left = 30.0
offset_top = 15.0
offset_right = 90.0
offset_bottom = 75.0
texture = ExtResource("15_ipkdy")
expand_mode = 1

[node name="Label" type="Label" parent="UI/Viewer Controls/Toolbar/View Options/Cal Band Simulator"]
layout_mode = 0
offset_top = 69.0
offset_right = 120.0
offset_bottom = 108.0
text = "Cal Band
Simulator"
label_settings = SubResource("LabelSettings_1mtp0")
horizontal_alignment = 1

[node name="Button" type="TextureButton" parent="UI/Viewer Controls/Toolbar/View Options/Cal Band Simulator"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 100.0
mouse_default_cursor_shape = 2

[node name="Navbar" type="ColorRect" parent="UI/Viewer Controls"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -120.0
color = Color(0.160784, 0.168627, 0.192157, 1)

[node name="Stunt Sheet" type="Label" parent="UI/Viewer Controls/Navbar"]
layout_mode = 0
offset_left = 24.0
offset_top = 21.0
offset_right = 227.0
offset_bottom = 63.0
text = "Stunt Sheet "
label_settings = SubResource("LabelSettings_expfl")

[node name="Beat" type="Label" parent="UI/Viewer Controls/Navbar"]
layout_mode = 0
offset_left = 24.0
offset_top = 64.0
offset_right = 227.0
offset_bottom = 106.0
text = "Beat"
label_settings = SubResource("LabelSettings_8j0sq")

[node name="Scrubber" type="Control" parent="UI/Viewer Controls/Navbar"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 2.0
grow_horizontal = 2

[node name="Slider" type="HSlider" parent="UI/Viewer Controls/Navbar/Scrubber"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_top = -28.0
offset_bottom = 20.0
mouse_default_cursor_shape = 2
theme = ExtResource("4_5a274")
min_value = 1.0
step = 0.01
value = 1.0
scrollable = false

[node name="Controls" type="Control" parent="UI/Viewer Controls/Navbar"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Play" type="ColorRect" parent="UI/Viewer Controls/Navbar/Controls"]
material = SubResource("ShaderMaterial_lxmka")
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -60.0
offset_right = 60.0
color = Color(0.0941176, 0.0980392, 0.113725, 1)

[node name="Play Icon" type="TextureRect" parent="UI/Viewer Controls/Navbar/Controls/Play"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 37.5
offset_top = 37.5
offset_right = -37.5
offset_bottom = -37.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("18_53c3i")
expand_mode = 1

[node name="Step Forward" type="TextureButton" parent="UI/Viewer Controls/Navbar/Controls"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 90.0
offset_top = -15.0
offset_right = 120.0
offset_bottom = 15.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("18_53c3i")
ignore_texture_size = true
stretch_mode = 0

[node name="Step Backward" type="TextureButton" parent="UI/Viewer Controls/Navbar/Controls"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -15.0
offset_right = -90.0
offset_bottom = 15.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("18_53c3i")
ignore_texture_size = true
stretch_mode = 0
flip_h = true

[node name="Skip Backward" type="TextureButton" parent="UI/Viewer Controls/Navbar/Controls"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -15.0
offset_right = -150.0
offset_bottom = 15.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("19_6a6cn")
ignore_texture_size = true
stretch_mode = 0
flip_h = true

[node name="Skip Forward" type="TextureButton" parent="UI/Viewer Controls/Navbar/Controls"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 150.0
offset_top = -15.0
offset_right = 180.0
offset_bottom = 15.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("19_6a6cn")
ignore_texture_size = true
stretch_mode = 0

[node name="Tab Menu" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2

[node name="Background" type="ColorRect" parent="UI/Tab Menu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 120.0
offset_right = 480.0
offset_bottom = -120.0
grow_horizontal = 0
color = Color(0.0941176, 0.0980392, 0.113725, 1)
script = ExtResource("20_ork4b")

[node name="Tab Animator" type="AnimationPlayer" parent="UI/Tab Menu/Background"]
libraries = {
"": SubResource("AnimationLibrary_xsdqm")
}

[node name="Button" type="ColorRect" parent="UI/Tab Menu/Background"]
layout_mode = 0
offset_left = -60.0
offset_bottom = 60.0
color = Color(0.0941176, 0.0980392, 0.113725, 1)

[node name="TextureButton" type="TextureButton" parent="UI/Tab Menu/Background/Button"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 50.0
offset_bottom = 50.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("21_dywut")
ignore_texture_size = true
stretch_mode = 0

[node name="Options" type="VBoxContainer" parent="UI/Tab Menu/Background"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 840.0
grow_horizontal = 2

[node name="Highlight" type="Control" parent="UI/Tab Menu/Background/Options"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/Tab Menu/Background/Options/Highlight"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 460.0
offset_bottom = 60.0
text = "Highlight My Dot"
label_settings = SubResource("LabelSettings_xwrag")

[node name="OptionButton" type="OptionButton" parent="UI/Tab Menu/Background/Options/Highlight"]
layout_mode = 0
offset_left = 20.0
offset_top = 65.0
offset_right = 460.0
offset_bottom = 105.0
theme = ExtResource("4_5a274")
clip_text = true
item_count = 1
selected = 0
fit_to_longest_item = false
allow_reselect = true
popup/item_0/text = "None"
popup/item_0/id = 0

[node name="Main Menu" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Background" type="ColorRect" parent="UI/Main Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.160784, 0.168627, 0.192157, 1)

[node name="Content" type="Control" parent="UI/Main Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Name" type="Label" parent="UI/Main Menu/Content"]
layout_mode = 1
anchors_preset = -1
anchor_left = 24.025
anchor_top = 12.225
anchor_right = 24.025
anchor_bottom = 12.225
offset_left = -446.0
offset_top = -77.0
offset_right = 446.0
text = "CalChart Viewer 3D"
label_settings = SubResource("LabelSettings_4ofsf")
horizontal_alignment = 1

[node name="Info" type="Label" parent="UI/Main Menu/Content"]
modulate = Color(1, 1, 1, 0.764706)
layout_mode = 0
offset_left = -240.0
offset_top = -4.0
offset_right = 240.0
offset_bottom = 33.0
text = "Loading shows..."
label_settings = SubResource("LabelSettings_4mjcl")
horizontal_alignment = 1

[node name="Highstepper" type="TextureRect" parent="UI/Main Menu/Content"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.031
anchor_right = 0.5
anchor_bottom = 1.031
offset_left = -150.0
offset_top = -386.0
offset_right = 150.0
offset_bottom = -86.0
texture = ExtResource("7_84ki6")
expand_mode = 1

[node name="Show List" type="ItemList" parent="UI/Main Menu/Content"]
layout_mode = 0
offset_left = -240.0
offset_top = 45.0
offset_right = 240.0
offset_bottom = 365.0
mouse_default_cursor_shape = 2
theme = ExtResource("4_5a274")

[node name="Main Menu Animator" type="AnimationPlayer" parent="UI/Main Menu"]
root_node = NodePath("../Background")
libraries = {
"": SubResource("AnimationLibrary_eo7hj")
}

[node name="World" type="Node3D" parent="."]

[node name="Environment" type="WorldEnvironment" parent="World"]
environment = SubResource("Environment_8aip2")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="World"]

[node name="Agents" type="Node3D" parent="World"]

[node name="Field Model" type="Node3D" parent="World"]

[node name="Field Base" type="MeshInstance3D" parent="World/Field Model"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 80, 0, 42)
material_override = SubResource("StandardMaterial3D_ed38i")
mesh = SubResource("PlaneMesh_1h4js")

[node name="Camera" type="Camera3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 0.766044, 0.642788, 0, -0.642788, 0.766044, 80, 40, 100)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="World"]
transform = Transform3D(0.918021, 0.0965321, -0.384602, 0.390708, -0.0545816, 0.918895, 0.0677106, -0.993832, -0.0878229, -16.5302, 63.7299, -23.8063)

[connection signal="pressed" from="UI/Focus Detector" to="Director/Movement Controller" method="_on_focus_detector_pressed"]
[connection signal="drag_ended" from="UI/Viewer Controls/Navbar/Scrubber/Slider" to="UI" method="_on_slider_drag_ended"]
[connection signal="drag_started" from="UI/Viewer Controls/Navbar/Scrubber/Slider" to="UI" method="_on_slider_drag_started"]
[connection signal="value_changed" from="UI/Viewer Controls/Navbar/Scrubber/Slider" to="UI" method="_on_slider_value_changed"]
[connection signal="pressed" from="UI/Viewer Controls/Navbar/Controls/Step Forward" to="Director/Agent Director" method="_on_step_forward_pressed"]
[connection signal="pressed" from="UI/Viewer Controls/Navbar/Controls/Step Backward" to="Director/Agent Director" method="_on_step_backward_pressed"]
[connection signal="pressed" from="UI/Viewer Controls/Navbar/Controls/Skip Backward" to="Director/Agent Director" method="_on_skip_backward_pressed"]
[connection signal="pressed" from="UI/Viewer Controls/Navbar/Controls/Skip Forward" to="Director/Agent Director" method="_on_skip_forward_pressed"]
[connection signal="pressed" from="UI/Tab Menu/Background/Button/TextureButton" to="UI/Tab Menu/Background" method="_on_texture_button_pressed"]
[connection signal="item_selected" from="UI/Tab Menu/Background/Options/Highlight/OptionButton" to="Director/Agent Director" method="_on_option_button_item_selected"]
[connection signal="item_selected" from="UI/Tab Menu/Background/Options/Highlight/OptionButton" to="UI/Viewer Controls/Toolbar/View Options" method="_on_option_button_item_selected"]
[connection signal="item_selected" from="UI/Main Menu/Content/Show List" to="Director/Network" method="_on_show_list_item_selected"]
